# stdin-bot-telegram

./: Cargo.toml  LICENSE  README.md
res/: config.ini  test_msg.txt
run/: chat_id.txt
src/: args.rs  configprovider.rs  main.rs
