[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8",  features = ["rt-multi-thread", "macros", "io-std"] }
configparser = "3.1.0"
atty = "0.2.14"
clap = { version = "4.5.48", features = ["derive"] }


[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
